// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div
  className="boxed-group abs-width-600"
>
  <div
    className="boxed-group-inner"
  >
    <h2>
      onboarding.create_project.pat_form.title.azure
    </h2>
    <div
      className="big-spacer-top big-spacer-bottom"
    >
      <FormattedMessage
        defaultMessage="onboarding.create_project.pat_help.instructions.azure"
        id="onboarding.create_project.pat_help.instructions"
        values={
          Object {
            "link": <ForwardRef(Link)
              className="link-no-underline"
              target="_blank"
              to="http://www.example.com/_usersSettings/tokens"
            >
              onboarding.create_project.pat_help.instructions.link.azure
            </ForwardRef(Link)>,
            "scope": <strong>
              <em>
                Code (Read & Write)
              </em>
            </strong>,
          }
        }
      />
    </div>
    <form
      onSubmit={[Function]}
    >
      <ValidationInput
        error="onboarding.create_project.pat_form.pat_required"
        id="personal_access_token"
        isInvalid={false}
        isValid={false}
        label="onboarding.create_project.enter_pat"
        required={true}
      >
        <input
          autoFocus={true}
          className="width-100 little-spacer-bottom"
          id="personal_access_token"
          minLength={1}
          name="personal_access_token"
          onChange={[Function]}
          type="text"
          value=""
        />
      </ValidationInput>
      <SubmitButton
        disabled={true}
      >
        onboarding.create_project.pat_form.list_repositories
      </SubmitButton>
      <DeferredSpinner
        className="spacer-left"
        loading={false}
      />
    </form>
  </div>
</div>
`;

exports[`should render correctly: submitting 1`] = `
<div
  className="boxed-group abs-width-600"
>
  <div
    className="boxed-group-inner"
  >
    <h2>
      onboarding.create_project.pat_form.title.azure
    </h2>
    <div
      className="big-spacer-top big-spacer-bottom"
    >
      <FormattedMessage
        defaultMessage="onboarding.create_project.pat_help.instructions.azure"
        id="onboarding.create_project.pat_help.instructions"
        values={
          Object {
            "link": <ForwardRef(Link)
              className="link-no-underline"
              target="_blank"
              to="http://www.example.com/_usersSettings/tokens"
            >
              onboarding.create_project.pat_help.instructions.link.azure
            </ForwardRef(Link)>,
            "scope": <strong>
              <em>
                Code (Read & Write)
              </em>
            </strong>,
          }
        }
      />
    </div>
    <form
      onSubmit={[Function]}
    >
      <ValidationInput
        error="onboarding.create_project.pat_form.pat_required"
        id="personal_access_token"
        isInvalid={false}
        isValid={false}
        label="onboarding.create_project.enter_pat"
        required={true}
      >
        <input
          autoFocus={true}
          className="width-100 little-spacer-bottom"
          id="personal_access_token"
          minLength={1}
          name="personal_access_token"
          onChange={[Function]}
          type="text"
          value=""
        />
      </ValidationInput>
      <SubmitButton
        disabled={true}
      >
        onboarding.create_project.pat_form.list_repositories
      </SubmitButton>
      <DeferredSpinner
        className="spacer-left"
        loading={true}
      />
    </form>
  </div>
</div>
`;

exports[`should render correctly: validation failed 1`] = `
<div
  className="boxed-group abs-width-600"
>
  <div
    className="boxed-group-inner"
  >
    <h2>
      onboarding.create_project.pat_form.title.azure
    </h2>
    <div
      className="big-spacer-top big-spacer-bottom"
    >
      <FormattedMessage
        defaultMessage="onboarding.create_project.pat_help.instructions.azure"
        id="onboarding.create_project.pat_help.instructions"
        values={
          Object {
            "link": <ForwardRef(Link)
              className="link-no-underline"
              target="_blank"
              to="http://www.example.com/_usersSettings/tokens"
            >
              onboarding.create_project.pat_help.instructions.link.azure
            </ForwardRef(Link)>,
            "scope": <strong>
              <em>
                Code (Read & Write)
              </em>
            </strong>,
          }
        }
      />
    </div>
    <form
      onSubmit={[Function]}
    >
      <ValidationInput
        error="onboarding.create_project.pat_form.pat_required"
        id="personal_access_token"
        isInvalid={true}
        isValid={false}
        label="onboarding.create_project.enter_pat"
        required={true}
      >
        <input
          autoFocus={true}
          className="width-100 little-spacer-bottom is-invalid"
          id="personal_access_token"
          minLength={1}
          name="personal_access_token"
          onChange={[Function]}
          type="text"
          value=""
        />
      </ValidationInput>
      <SubmitButton
        disabled={true}
      >
        onboarding.create_project.pat_form.list_repositories
      </SubmitButton>
      <DeferredSpinner
        className="spacer-left"
        loading={false}
      />
    </form>
  </div>
</div>
`;
